# Elastos.SDK.Wallet.Android

./: .gitignore  README.md
gradle/wrapper/: gradle-wrapper.properties
lib/: CMakeLists.txt  build.gradle
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: BlockChainNode_jni.cpp  CMakeLists.txt  DidManager_jni.cpp  Did_jni.cpp  ElastosSDKWalletJni.cpp  HDWallet_jni.cpp  IdentityManager_jni.cpp  Identity_jni.cpp  Transaction_jni.cpp
lib/src/main/java/org/elastos/sdk/wallet/: BlockChainNode.java  Did.java  DidManager.java  HDWallet.java  Identity.java  IdentityManager.java  Transaction.java  WalletBase.java
scripts/: build.sh
test/: build.gradle
test/src/main/: AndroidManifest.xml
test/src/main/java/org/elastos/sdk/wallet/test/: MainActivity.java
